--- a/hm1.ipynb
+++ b/hm1.ipynb
@@ -1,12 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "test"
+    "##test\n",
+    "\n"
    ]
   }
  ],
