--- a/hm1.ipynb
+++ b/hm1.ipynb
@@ -1,12 +1,49 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input phrase1\n",
+      "qwe\n",
+      "input phrase2\n",
+      "asd\n",
+      "no winner\n"
+     ]
+    }
+   ],
    "source": [
-    "##test\n",
-    "\n"
+    "print(\"input phrase1\")\n",
+    "phrase_1=input()\n",
+    "print(\"input phrase2\")\n",
+    "phrase_2=input()\n",
+    "\n",
+    "if len(phrase_1)>len(phrase_2):\n",
+    "    print(\"frase1 longer than phrase2\")\n",
+    "elif len(phrase_1)<len(phrase_2):\n",
+    "    print(\"frase2 longer than phrase2\")\n",
+    "else: \n",
+    "    print(\"no winner\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
