--- a/hm1.ipynb
+++ b/hm1.ipynb
@@ -2,22 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "задание1 у кого длинее\n",
       "input phrase1\n",
-      "qwe\n",
+      "123\n",
       "input phrase2\n",
-      "asd\n",
+      "123\n",
       "no winner\n"
      ]
     }
    ],
    "source": [
+    "print(\"задание1 у кого длинее\")\n",
     "print(\"input phrase1\")\n",
     "phrase_1=input()\n",
     "print(\"input phrase2\")\n",
