--- a/hm1.ipynb
+++ b/hm1.ipynb
@@ -26,11 +26,37 @@
     "phrase_2=input()\n",
     "\n",
     "if len(phrase_1)>len(phrase_2):\n",
-    "    print(\"frase1 longer than phrase2\")\n",
+    "    print(\"Фраза 1 длиннее фразы 2\")\n",
     "elif len(phrase_1)<len(phrase_2):\n",
-    "    print(\"frase2 longer than phrase2\")\n",
+    "    print(\"Фраза 2 длиннее фразы 1\")\n",
     "else: \n",
-    "    print(\"no winner\")"
+    "    print(\"Фразы равной длины\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "задание2 какой год\n",
+      "input year\n",
+      "8\n",
+      "Високосный год\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"задание2 какой год\")\n",
+    "print(\"input year\")\n",
+    "a=int(input())\n",
+    "if (a%4==0) and ((a%100!=0)or(a%400==0))  :\n",
+    "    print(\"Високосный год\")\n",
+    "else: \n",
+    "     print(\"Обычный год\")"
    ]
   },
   {
