--- a/lection1/hw.ipynb
+++ b/lection1/hw.ipynb
@@ -99,12 +99,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "задание4 средняя по больнице\n",
+      "input country, 0 is end of input\n",
+      "Tundra\n",
+      "Введите температуры через пробел -10 -20 -60\n",
+      "input country, 0 is end of input\n",
+      "Sakhara\n",
+      "Введите температуры через пробел 100 120 130\n",
+      "input country, 0 is end of input\n",
+      "0\n",
+      "Данные:\n",
+      " [['Tundra', [-10.0, -20.0, -60.0]], ['Sakhara', [100.0, 120.0, 130.0]]] \n",
+      "\n",
+      "Tundra - -34.4 C\n",
+      "Sakhara - 47.0 C\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"задание4 средняя по больнице\")\n",
-    "boys = list(map(str,input('Введите название страны и температуры пробел ').split()))\n"
+    "\n",
+    "countries_temperature=[]\n",
+    "countr_temp=[]\n",
+    "\n",
+    "while True:\n",
+    "    print(\"input country, 0 is end of input\")\n",
+    "    country=str(input())\n",
+    "    if country==\"0\": \n",
+    "        break\n",
+    "    countr_temp.append(country)\n",
+    "    temperatures= list(map(float,input('Введите температуры через пробел ').split()))\n",
+    "    countr_temp.append(temperatures)\n",
+    "    countries_temperature.append(countr_temp)\n",
+    "    #print(\"count_temp=\",countr_temp)\n",
+    "    countr_temp=[]\n",
+    "    temperatures=[]\n",
+    "print(\"Данные:\\n\",countries_temperature,\"\\n\")\n",
+    "\n",
+    "mid=float(0)\n",
+    "mid_f=float(0)\n",
+    "for i in range(len(countries_temperature)):\n",
+    "    for j in range(len(countries_temperature[i][1])):\n",
+    "        mid=mid+(countries_temperature[i][1][j]-32)/1.8\n",
+    "        mid_f=mid_f+countries_temperature[i][1][j]\n",
+    "    #print(\"end inside\")\n",
+    "    mid_f_final=float(mid_f/len(countries_temperature[i][1]))\n",
+    "    mid_final=float(mid/len(countries_temperature[i][1]))\n",
+    "    print(countries_temperature[i][0],\"-\",\"{0:.1f}\".format(mid_final),\"C\")\n",
+    "    #print(countries_temperature[i][0],\"-\",mid_f_final,\"F\")\n",
+    "    mid=float(0)\n",
+    "    mid_f=float(0)\n",
+    "#print(mid_f_final)\n",
+    "#print(\"fin\")"
    ]
   },
   {
@@ -112,7 +165,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "    "
+   ]
   }
  ],
  "metadata": {
